// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Sanity ValueList Payload Test should execute 'ValueListPayload' entrypoint with invalid data 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:12:createdFromPolicyRev": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "createdFromPolicyRev",
          "fieldPath": "createdFromPolicyRev",
          "fieldType": "INTEGER",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "err-integer-value-list",
                "templateVariables": Array [],
              },
              "success": false,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  1,
                  2,
                  3,
                  4,
                  5,
                  6,
                  7,
                  8,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy revision must be within allowed values",
              "targetPath": "createdFromPolicyRev",
            },
          },
        ],
      },
      "Policy:12:policyCurrency": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "policyCurrency",
          "fieldPath": "policyCurrency",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "err-string-value-list",
                "templateVariables": Array [],
              },
              "success": false,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "STRING",
                "values": Array [
                  "USD",
                  "CAD",
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy currency must be within allowed values",
              "targetPath": "policyCurrency",
            },
          },
        ],
      },
      "Policy:12:policyValue": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "policyValue",
          "fieldPath": "policyValue",
          "fieldType": "MONEY",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": false,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  100,
                  200,
                  350,
                  400.99,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy value must be within allowed values",
              "targetPath": "policyValue",
            },
          },
        ],
      },
      "RRCoverage:21:limitAmount": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "21",
          "contextName": "RRCoverage",
          "fieldName": "limitAmount",
          "fieldPath": "limitAmount",
          "fieldType": "DECIMAL",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": false,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  800000,
                  900000,
                  1000000,
                  800000.99,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "RRCoverage",
              "payloadtype": "VALUE_LIST",
              "ruleName": "RRCoverage limit must be within allowed values",
              "targetPath": "limitAmount",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:12:createdFromPolicyRev": Object {
      "fieldType": "INTEGER",
      "id": "Policy:12:createdFromPolicyRev",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "createdFromPolicyRev",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "err-integer-value-list",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "err-integer-value-list",
              "templateVariables": Array [],
            },
            "success": false,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
              ],
            },
          },
          "ruleName": "Policy revision must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
    "Policy:12:policyCurrency": Object {
      "fieldType": "STRING",
      "id": "Policy:12:policyCurrency",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyCurrency",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "err-string-value-list",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "err-string-value-list",
              "templateVariables": Array [],
            },
            "success": false,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "STRING",
              "values": Array [
                "USD",
                "CAD",
              ],
            },
          },
          "ruleName": "Policy currency must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
    "Policy:12:policyValue": Object {
      "fieldType": "MONEY",
      "id": "Policy:12:policyValue",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyValue",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-value-list-error",
          "errorMessage": "Value must be one of: {{0}}",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": false,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                100,
                200,
                350,
                400.99,
              ],
            },
          },
          "ruleName": "Policy value must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [
            "100, 200, 350, 400.99",
          ],
        },
      ],
    },
    "RRCoverage:21:limitAmount": Object {
      "fieldType": "DECIMAL",
      "id": "RRCoverage:21:limitAmount",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "limitAmount",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-value-list-error",
          "errorMessage": "Value must be one of: {{0}}",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": false,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                800000,
                900000,
                1000000,
                800000.99,
              ],
            },
          },
          "ruleName": "RRCoverage limit must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [
            "800000, 900000, 1000000, 800000.99",
          ],
        },
      ],
    },
  },
}
`;

exports[`Engine Sanity ValueList Payload Test should execute 'ValueListPayload' entrypoint with valid data 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:12:createdFromPolicyRev": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "createdFromPolicyRev",
          "fieldPath": "createdFromPolicyRev",
          "fieldType": "INTEGER",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "err-integer-value-list",
                "templateVariables": Array [],
              },
              "success": true,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  1,
                  2,
                  3,
                  4,
                  5,
                  6,
                  7,
                  8,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy revision must be within allowed values",
              "targetPath": "createdFromPolicyRev",
            },
          },
        ],
      },
      "Policy:12:policyCurrency": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "policyCurrency",
          "fieldPath": "policyCurrency",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": Object {
                "errorCode": "code",
                "errorMessage": "err-string-value-list",
                "templateVariables": Array [],
              },
              "success": true,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "STRING",
                "values": Array [
                  "USD",
                  "CAD",
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy currency must be within allowed values",
              "targetPath": "policyCurrency",
            },
          },
        ],
      },
      "Policy:12:policyValue": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "12",
          "contextName": "Policy",
          "fieldName": "policyValue",
          "fieldPath": "policyValue",
          "fieldType": "MONEY",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  100,
                  200,
                  350,
                  400.99,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "VALUE_LIST",
              "ruleName": "Policy value must be within allowed values",
              "targetPath": "policyValue",
            },
          },
        ],
      },
      "RRCoverage:21:limitAmount": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "21",
          "contextName": "RRCoverage",
          "fieldName": "limitAmount",
          "fieldPath": "limitAmount",
          "fieldType": "DECIMAL",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "success": true,
              "type": 2048,
              "validationSeverity": "critical",
              "valueList": Object {
                "valueType": "DECIMAL",
                "values": Array [
                  800000,
                  900000,
                  1000000,
                  800000.99,
                ],
              },
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "RRCoverage",
              "payloadtype": "VALUE_LIST",
              "ruleName": "RRCoverage limit must be within allowed values",
              "targetPath": "limitAmount",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:12:createdFromPolicyRev": Object {
      "fieldType": "INTEGER",
      "id": "Policy:12:createdFromPolicyRev",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "createdFromPolicyRev",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "err-integer-value-list",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "err-integer-value-list",
              "templateVariables": Array [],
            },
            "success": true,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                1,
                2,
                3,
                4,
                5,
                6,
                7,
                8,
              ],
            },
          },
          "ruleName": "Policy revision must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
    "Policy:12:policyCurrency": Object {
      "fieldType": "STRING",
      "id": "Policy:12:policyCurrency",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyCurrency",
      "ruleResults": Array [
        Object {
          "errorCode": "code",
          "errorMessage": "err-string-value-list",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": Object {
              "errorCode": "code",
              "errorMessage": "err-string-value-list",
              "templateVariables": Array [],
            },
            "success": true,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "STRING",
              "values": Array [
                "USD",
                "CAD",
              ],
            },
          },
          "ruleName": "Policy currency must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
    "Policy:12:policyValue": Object {
      "fieldType": "MONEY",
      "id": "Policy:12:policyValue",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policyValue",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-value-list-error",
          "errorMessage": "Value must be one of: {{0}}",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                100,
                200,
                350,
                400.99,
              ],
            },
          },
          "ruleName": "Policy value must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [
            "100, 200, 350, 400.99",
          ],
        },
      ],
    },
    "RRCoverage:21:limitAmount": Object {
      "fieldType": "DECIMAL",
      "id": "RRCoverage:21:limitAmount",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "limitAmount",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-value-list-error",
          "errorMessage": "Value must be one of: {{0}}",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "success": true,
            "type": 2048,
            "validationSeverity": "critical",
            "valueList": Object {
              "valueType": "DECIMAL",
              "values": Array [
                800000,
                900000,
                1000000,
                800000.99,
              ],
            },
          },
          "ruleName": "RRCoverage limit must be within allowed values",
          "severity": "critical",
          "templateVariables": Array [
            "800000, 900000, 1000000, 800000.99",
          ],
        },
      ],
    },
  },
}
`;
